# projects-app

./: .gitignore  README.md  example.flaskenv  pyproject.toml  requirements.txt
src/projects/: config.py
src/projects/adapters/projects/: orm.py  repository.py
src/projects/adapters/tasks/: orm.py  repository.py
src/projects/adapters/users/: orm.py  repository.py
src/projects/domain/: project.py  task.py  user.py
src/projects/entrypoints/flask/: __init__.py  projects.py  schema.py
src/projects/entrypoints/flask/api/: __init__.py  auth.py  errors.py  projects.py  tasks.py  tokens.py  users.py
src/projects/entrypoints/flask/auth/: __init__.py
src/projects/entrypoints/flask/errors/: __init__.py  handlers.py
src/projects/entrypoints/flask/main/: __init__.py  routes.py
src/projects/service_layer/projects/: handlers.py
src/projects/service_layer/tasks/: handlers.py
src/projects/service_layer/users/: handlers.py
tests/: conftest.py  pytest.ini
tests/unit_tests/client_tests/: test_users_api.py
tests/unit_tests/domain_tests/: test_users.py
tests/unit_tests/orm_tests/: test_projects_orm.py  test_tasks_orm.py  test_users_orm.py
tests/unit_tests/repository_tests/: test_project_repo.py  test_task_repo.py  test_user_repo.py
tests/unit_tests/service_tests/: test_users.py
